--- a/pages/home/button/index.wxss
+++ b/pages/home/button/index.wxss
@@ -5,12 +5,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  padding: 80rpx 5rpx  0rpx 5rpx;
+  padding: 180rpx 5rpx  0rpx 5rpx;
   box-sizing: border-box;
 }
 .weui-grids {
     position: relative;
     overflow: hidden;
+    margin-right: 10%;
+    margin-left: 10%;
 }
  
  .weui-grids:before {
@@ -20,6 +22,9 @@
     top: 0;
     right: 0;
     height: 1px;
+    border-right: 1px solid #d9d9d9;
+    border-left: 1px solid #d9d9d9;
+    border-bottom: 1px solid #d9d9d9;
     border-top: 1px solid #d9d9d9;
     color: #d9d9d9;
     -webkit-transform-origin: 0 0;
@@ -35,7 +40,10 @@
     top: 0;
     width: 1px;
     bottom: 0;
+    border-right: 1px solid #d9d9d9;
     border-left: 1px solid #d9d9d9;
+    border-bottom: 1px solid #d9d9d9;
+    border-top: 1px solid #d9d9d9;
     color: #d9d9d9;
     -webkit-transform-origin: 0 0;
     transform-origin: 0 0;
@@ -48,7 +56,7 @@
 .weui-grid {
     position: relative;
     float: left;
-    padding: 20px 10px;
+    padding: 0px 0px;
     width: 50%;
     box-sizing: border-box;
 }
@@ -61,6 +69,9 @@
     width: 1px;
     bottom: 0;
     border-right: 1px solid #d9d9d9;
+    border-left: 1px solid #d9d9d9;
+    border-bottom: 1px solid #d9d9d9;
+    border-top: 1px solid #d9d9d9;
     color: #d9d9d9;
     -webkit-transform-origin: 100% 0;
     transform-origin: 100% 0;
@@ -75,7 +86,10 @@
     bottom: 0;
     right: 0;
     height: 1px;
+    border-right: 1px solid #d9d9d9;
+    border-left: 1px solid #d9d9d9;
     border-bottom: 1px solid #d9d9d9;
+    border-top: 1px solid #d9d9d9;
     color: #d9d9d9;
     -webkit-transform-origin: 0 100%;
     transform-origin: 0 100%;
