--- a/pages/home/button/resolve/line.wxml
+++ b/pages/home/button/resolve/line.wxml
@@ -1,38 +1,53 @@
 <view class="swiper-tab">
-    <view class="swiper-tab-list {{currentTab==0 ? 'on' : ''}}" data-current="0" bindtap="swichNav">哈哈</view>
-    <view class="swiper-tab-list {{currentTab==1 ? 'on' : ''}}" data-current="1" bindtap="swichNav">呵呵</view>
-    <view class="swiper-tab-list {{currentTab==2 ? 'on' : ''}}" data-current="2" bindtap="swichNav">嘿嘿</view>
+    <view class="swiper-tab-list {{currentTab==0 ? 'on' : ''}}" data-current="0" bindtap="swichNav">Last Week</view>
+    <view class="swiper-tab-list {{currentTab==1 ? 'on' : ''}}" data-current="1" bindtap="swichNav">{{secondtab}}</view>
+    <view class="swiper-tab-list {{currentTab==2 ? 'on' : ''}}" data-current="2" bindtap="swichNav">Duration</view>
 </view>
  
-<swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:{{winHeight - 31}}px" bindchange="bindChange">
+<swiper current="{{currentTab}}" class="swiper-box" duration="0" style="height:{{winHeight - 31}}px" bindchange="bindChange" >
     <!-- 我是哈哈 -->
     <swiper-item>
       <view class="container">
-	<view class="title">
-		<view wx:if="{{!isMainChartDisplay}}" class="back-btn" bindtap="backToMainChart">返回</view>
-		{{chartTitle}}
-	</view>
-    <canvas canvas-id="columnCanvas" class="canvas" bindtouchstart="touchHandler"></canvas>
-    <view style="text-align:center">点击数据每一项查看详情</view>
-</view>
+	      <view class="title">
+		      <view wx:if="{{!isMainChartDisplay}}" class="back-btn" bindtap="backToMainChart">返回</view>
+		      {{chartTitle}}
+	      </view>
+        <canvas canvas-id="columnCanvas" class="canvas" bindtouchstart="touchHandler"></canvas>
+        <view style="text-align:center">click on the bar to see more details</view>
+      </view>
     </swiper-item>
     <!-- 我是呵呵 -->
     <swiper-item>
-      <view>我是呵呵</view>
-    </swiper-item>
+    <view class="table" bindtap='updatedata'>
+  <view class="tr bg-w">
+    <view class="th1">bug_id</view>
+    <view class="th2">summary</view>
+  </view>
+  <scroll-view wx:for="{{listData}}" wx:key="{{bugid}}">
+    <view class="td bg-g" wx:if="{{index % 2 == 0}}">
+      <view class="td1" bindtap='goBaidu' data-id='{{item.bugid}}'>{{item.bugid}}</view>
+      <view class="td2">{{item.summary}}</view>
+    </view>
+    <view class="td" wx:else>
+      <view class="td1" bindtap='goBaidu' data-id='{{item.bugid}}'>{{item.bugid}}</view>
+      <view class="td2">{{item.summary}}</view>
+    </view>
+  </scroll-view>
+</view>
+</swiper-item>
     <!-- 我是嘿嘿 -->
-   
+      
     <swiper-item>
     <view class='select' catchtap='selectTap'>
         <text class='select_text'>{{selectData[index]}}</text>
-        <image class='select_img {{show&&"select_img_rotate"}}'      src='/icons/mail.png'></image>         
+        <image class='select_img {{show&&"select_img_rotate"}}'      ></image>         
 </view>
-<view class='option_box' style='height:{{show?(selectData.length>5?300:selectData.length*60):0}}rpx;'>
+<view class='option_box' style='height:{{show?(selectData.length>5?200:selectData.length*60):0}}rpx;'>
         <text class='option' style='{{index==selectData.length-1&&"border:0;"}}' wx:for='{{selectData}}' wx:key='this' data-index='{{index}}' catchtap='optionTap'>{{item}}</text>
 </view>
      <view class="container">
-    <canvas canvas-id="lineCanvas" disable-scroll="true" class="canvas" bindtouchstart="touchHandler"></canvas>
-    <button type="default" size='mini' bindtap="updateData" backgroundcolor="blue">更新数据</button>
+      <canvas canvas-id="lineCanvas" disable-scroll="false" class="canvas" bindtouchstart="touchHandler1"></canvas>
+     <button  type="default" size='mini' bindtap="updateData" backgroundcolor="blue" >Select</button>
     </view>
    </swiper-item>
 </swiper>
