--- a/pages/home/button/showsearch/search.wxml
+++ b/pages/home/button/showsearch/search.wxml
@@ -4,11 +4,11 @@
     <view class="th2">summary</view>
   </view>
   <scroll-view wx:for="{{listData}}" wx:key="{{bugid}}">
-    <view class="td bg-g" wx:if="{{index % 2 == 0}}">
+    <view class="tr bg-g" wx:if="{{index % 2 == 0}}">
       <view class="td1" bindtap='goBaidu' data-id='{{item.bugid}}'>{{item.bugid}}</view>
       <view class="td2">{{item.summary}}</view>
     </view>
-    <view class="td" wx:else>
+    <view class="tr" wx:else>
       <view class="td1" bindtap='goBaidu' data-id='{{item.bugid}}'>{{item.bugid}}</view>
       <view class="td2">{{item.summary}}</view>
     </view>
