--- a/pages/home/button/comment/line.wxml
+++ b/pages/home/button/comment/line.wxml
@@ -1,15 +1,15 @@
 <view class="swiper-tab">
     <view class="swiper-tab-list {{currentTab==0 ? 'on' : ''}}" data-current="0" bindtap="swichNav">Last Week</view>
     <view class="swiper-tab-list {{currentTab==1 ? 'on' : ''}}" data-current="1" bindtap="swichNav">{{secondtab}}</view>
-    <view class="swiper-tab-list {{currentTab==2 ? 'on' : ''}}" data-current="2" bindtap="swichNav">Duration</view>
+    <view class="swiper-tab-list {{currentTab==2 ? 'on' : ''}}" data-current="2" bindtap="swichNav">Two months</view>
 </view>
  
-<swiper current="{{currentTab}}" class="swiper-box" duration="0" style="height:{{winHeight - 31}}px" bindchange="bindChange" >
+<swiper current="{{currentTab}}" class="swiper-box" duration="0" style="height:{{winHeight}}px" bindchange="bindChange" >
     <!-- 我是哈哈 -->
-    <swiper-item>
+    <swiper-item style="height:100%">
       <view class="container">
 	<view class="title">
-		<view wx:if="{{!isMainChartDisplay}}" class="back-btn" bindtap="backToMainChart">返回</view>
+		<!--view wx:if="{{!isMainChartDisplay}}" class="back-btn" bindtap="backToMainChart">返回</view-->
 		{{chartTitle}}
 	</view>
     <canvas canvas-id="columnCanvas" class="canvas" bindtouchstart="touchHandler"></canvas>
@@ -17,13 +17,14 @@
 </view>
     </swiper-item>
     <!-- 我是呵呵 -->
-    <swiper-item >
-    <view class="table" bindtap='updatedata'>
-  <view class="tr bg-w">
-    <view class="th1">bug_id</view>
-    <view class="th2">summary</view>
-  </view>
-  <scroll-view wx:for="{{listData}}" wx:key="{{bugid}}">
+    <swiper-item  style="height:100%">
+    <scroll-view class='scroll-views'>
+    <view class="table" >
+      <view class="tr bg-w">
+      <view class="th1" >bug_id</view>
+      <view class="th2" >summary</view>
+    </view>
+  <view wx:for="{{listData}}" wx:key="{{bugid}}">
     <view class="td bg-g" wx:if="{{index % 2 == 0}}">
       <view class="td1" bindtap='goBaidu' data-id='{{item.bugid}}'>{{item.bugid}}</view>
       <view class="td2">{{item.summary}}</view>
@@ -32,22 +33,25 @@
       <view class="td1" bindtap='goBaidu' data-id='{{item.bugid}}'>{{item.bugid}}</view>
       <view class="td2">{{item.summary}}</view>
     </view>
-  </scroll-view>
+  </view>
 </view>
+</scroll-view>
 </swiper-item>
     <!-- 我是嘿嘿 -->
       
-    <swiper-item>
-    <view class='select' catchtap='selectTap'>
+    <swiper-item style="height:100%">
+    <view style="height:100%" >
+    <view class='select' catchtap='selectTap' >
         <text class='select_text'>{{selectData[index]}}</text>
         <image class='select_img {{show&&"select_img_rotate"}}'></image>         
-</view>
-<view class='option_box' style='height:{{show?(selectData.length>5?200:selectData.length*60):0}}rpx;'>
+    </view>
+    <view class='option_box' style='height:{{show?(selectData.length>5?200:selectData.length*60):0}}rpx;'>
         <text class='option' style='{{index==selectData.length-1&&"border:0;"}}' wx:for='{{selectData}}' wx:key='this' data-index='{{index}}' catchtap='optionTap'>{{item}}</text>
-</view>
-     <view class="container">
+    </view>
+    <view class="container">
       <canvas canvas-id="lineCanvas" disable-scroll="false" class="canvas" bindtouchstart="touchHandler1"></canvas>
      <button type="default" size='mini' bindtap="updateData" backgroundcolor="blue">Select</button>
+    </view>
     </view>
    </swiper-item>
 </swiper>
