--- a/pages/home/button/report/line.wxss
+++ b/pages/home/button/report/line.wxss
@@ -53,7 +53,7 @@ page{
   box-sizing: border-box;
   width: 100%;
   height: 70rpx;
-  border:1px  solid #efefef;
+  border:1px  solid #4169E1;
   border-radius: 8rpx;
   display: flex;
   align-items: center;
